--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "clicky-game",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://JarrettD5309.github.io/clicky-game",
+  "homepage": "http://JarrettD5309.github.io/clicky-game",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
